--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-phone-number-input": "^3.4.9",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "stripe": "^17.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
